# smart-agent-pet-engagement-system

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yaml  test.yaml
common/: __init__.py  logger.py  schemas.py
components/actuator/: actuator.py
components/actuator/src/: actuator.py  logger.py
components/actuator/src/activate/: __init__.py  activate.py
components/actuator/src/models/: __init__.py  activation_schedule.py
components/actuator/src/notify/: __init__.py  notify.py
components/data_aggregation/src/: app.py  schemas.py  smhi.py
components/data_aggregation/src/database/: __init__.py  dynamodb_client.py  table.py
components/data_aggregation/src/models/: __init__.py  sensor_activations.py
components/data_processing/: data_processing.py
components/data_processing/src/: data_processing.py
components/data_processing/src/database/: __init__.py  table.py
components/data_processing/src/models/: __init__.py  activation_schedule.py  sensor_activations.py  temp_model.py
components/house_toys_simulator/src/: app.py
components/mobile_app_simulator/src/: app.py
components/sensor_client/src/: api.py  data_aggregation.py  logger.py  sensor_client.py
src/data_aggregation/src/: app.py
src/data_aggregation/src/database/: dynamodb_client.py  table.py
src/data_aggregation/src/models/: sensor_activations.py
src/sensor_client/: pyproject.toml
src/sensor_client/src/: loop.py  sensor_client.py
