[tool.poetry]
name = "smart-agent-pet-engagement-system"
version = "0.1.0"
description = ""
authors = ["Artem Sliusarenko <artemsliusarenko@Artems-MacBook-Pro.local>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
flake8-black = "^0.3.6"
isort = "^5.13.2"


[tool.poetry.group.data_aggregation.dependencies]
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
boto3 = "^1.34.79"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "loop"
ignore_missing_imports = true