[tool.poetry]
name = "sensor-client"
version = "0.1.0"
description = "Sensor client. Motion sensor that sends data to the data aggregation server upon activation."
authors = ["Artem Sliusarenko <artemsliusarenko@Artems-MacBook-Pro.local>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"